src/styles/index.scss
@import './global.scss';

div.homeContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-top: 70px;
  header {
    margin: 41px 37px 0 37px;
    >h1 {
      color: $ashgray;
      text-align: center;
      font-family: Inter;
      font-size: 2.4em;
      font-style: normal;
      font-weight: 500;
      line-height: 37.579px;
      margin: 0;
      strong {
        font-family: 'ClashDisplay-Medium';
        display:block;
        margin-bottom: 0.5em;
        span{
          display: inline-block;
        }
      }
      span:nth-of-type(4){
        font-family: Inter, monospace;
      }

    }
    >p {
      color: $ashgray;
      text-align: center;
      font-family: Inter;
      font-size: 14px;
      font-style: normal;
      font-weight: 500;
      line-height: normal;
      margin: 36px auto;
      >span {
        font-weight: 700;
      }
    }

    @include respond-to('large') {
      max-width: 1188.456px;
      >h1 {
        font-size: 74px;
        line-height: 83px;
        span:nth-of-type(4) {
          &::after {
            border: 2px solid $pumpkin;
            top: 20px;
            left: -16px;
            right: 0;
            bottom: 0;
            width: 440px;
            height: 60px;
          }
        }
      }
      >p {
        font-size: 16px;
        max-width: 680px;
        margin: 50px auto;
      }
    }
  }

  main {
    padding: 0 15px;
    margin-bottom: 50px;
  }

  #hero {
    background-color: $snow;
    box-sizing: border-box;
    border-radius: 10px;
    margin-top: 155px;
    position: relative;
    padding-top: 68px;
    padding-bottom: 25px;
    .heroContent {
      >h2 {
        color: $coal;
        font-family: 'ClashDisplay-Medium';
        font-size: 30px;
        font-style: normal;
        font-weight: 500;
        line-height: normal;
        box-sizing: border-box;
        margin: 0 20px 0 20px;
        text-align: left;
        span:first-of-type {
          font-family: 'ClashDisplay-Semibold';
        }
        span:nth-of-type(2) {
          font-family: Inter;
          font-weight: 500;
        }
        span:nth-of-type(3) {
          font-family: Inter;
          font-weight: 700;
        }
      }
      >p {
        color: $coal;
        font-family: Inter;
        font-size: 14px;
        font-style: normal;
        font-weight: 500;
        line-height: normal;
        margin-top: 30px;
        text-align: left;
        margin: 30px 20px 30px 20px;
        >span {
          font-weight: 700;
        }
      }
    }
    .heroCards {
      margin: 0 20px;
      display: flex;
      justify-content: flex-start;
      flex-wrap: wrap;
      gap: 6px;
      margin-bottom: 25px;
    }
    .heroButtons {
      position: absolute;
      top: -145px;
      left: 0;
      width: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      >.button {
        margin-bottom: 6px;
      }
    }
    @include respond-to('medium') {
      margin-top: 85px;
      .heroButtons {
        top: -52px;
        left: 0px;
        width: 100%;
        flex-direction: row;
        >.button {
          margin-bottom: 0;
          margin-right: 50px;
        }
        >.button:last-of-type {
          margin-right: 0;
        }
      }
    }
    @include respond-to('large') {
      display: flex;
      justify-content: space-between;
      align-items: center;
      .heroContent {
        >h2 {
          font-size: 54px;
        }
        >p {
          font-size: 16px;
        }
      }
      .heroContent {
        width: 50%;
        max-width: 708.438px;
        margin-left: 4%;
      }
      .heroCards {
        width: 50%;
        max-width: 660px;
        height: 100%;
        justify-content: center;
        align-items: center;
        margin-top: 82px;
        margin-right: 4%;
      }
    }
  }
  #why {
    font-family: Inter;
    padding-bottom: 20px;
    .whyContent {
      margin: 40px 0 0;
      >h2 {
        margin: 40px 0 0;
        padding: 0;
        color: $pearly;
        box-sizing: border-box;
        font-size: 30px;
        font-style: normal;
        font-weight: 500;
        line-height: normal;
        text-align: center;
        >br {
          display: block;
        }
        .encircled {
          position: relative;
          padding: 0;
          box-sizing: border-box;
        }
        .encircled::after {
          position: absolute;
          margin: 0;
          padding: 0;
          box-sizing: border-box;
          top: 5px;
          right: -90px;
          width: 120px;
          height: 72px;
          content: ' ';
          background: url('../images/why_arrow.svg');
          background-repeat: no-repeat;
          background-position: center center;
          background-size: contain;
        }
      }
      >p {
        box-sizing: border-box;
        text-align: center;
        font-size: 14px;
        margin: 30px auto 0;
        max-width: 350px;
        padding: 0 20px;
        >br {
          display: none;
        }
      }
    }
    .whyCards {
      padding: 0 20px;
      box-sizing: border-box;
      display: flex;
      margin: 43px auto 0;
      flex-flow: row;
      flex-wrap: wrap;
      justify-content: center;
      gap: 6px;
      .whyCard{
        display: flex;
        box-sizing: border-box;
        width: 100%;
        max-width: 350px;
        border-radius: 20px;
        flex-flow: column;
        align-items: center;
        justify-content: center;
        padding: 0 48px;
        aspect-ratio: 1;
        .title {
          font-weight: bold;
          font-size: 16px;
          white-space: pre-line;
          margin: 17px 0 0;
        }
        .text {
          font-size: 14px;
          font-weight: 500;
          margin: 13px 0 0;
        }
      }
    }
    @include respond-to('small') {
      .whyContent {
        >h2 {
          font-size: 36px;
          margin: 60px 0 0;
          .encircled::after {
            top: 10px;
            right: -110px;
            width: 142px;
            height: 85px;
          }
          >br {
            display: block;
          }
        }
        >p {
          font-size: 14px;
          margin: 40px auto 0;
          max-width: 600px;
          >br {
            display: none;
          }
        }
      }
      .whyCards{
        padding: 0 0px;
        .whyCard{
          padding: 0 24px;
          max-width: 320px;
          flex: 0 0 calc(50% - 10px);
        }
        
      }
    }@include respond-to('medium') {
      .whyContent {
        >h2 {
          margin: 80px 0 0;
          font-size: 44px;
          .encircled::after {
            top: 10px;
            right: -135px;
            width: 175px;
            height: 105px;
          }
        }
        >p {
          margin: 55px auto 0;
          max-width: 700px;
          font-size: 16px;
        }
      }
      .whyCards{
        gap: 20px;
        .whyCard{
          max-width: 320px;
          .title {
            margin: 24px 0 0;
          }
          .text {
            font-size: 16px;
            margin: 20px 0 0;
          }
        }
      }
    }
    @include respond-to('large') {
      .whyContent {
        >h2 {
          margin: 110px 0 0;
          font-size: 54px;
          .encircled::after {
            top: 0px;
            right: -195px;
            width: 250px;
            height: 150px;
          }
          >br {
            display: block;
          }
        }
        >p {
          margin: 65px auto 0;
          max-width: 720px;
          >br {
            display: block;
          }
        }
      }
      .whyCards{
        margin: 65px auto 0;
        .whyCard{
          max-width: 365px;
        }
      }
    }
    @include respond-to('extra-large') {
      .whyContent {
        >h2 {
          .encircled::after {
            top: 0px;
            right: -195px;
            width: 250px;
            height: 150px;
          }
          >br {
            display: none;
          }
        }
      }
    }
  }

  @include respond-to('small') {
    #why {
      padding-bottom: 40px;
    }
  }
  @include respond-to('medium') {
    #why {
      padding-bottom: 60px;
    }
  }

  @include respond-to('large') {
    #why {
      padding-bottom: 80px;
    }
  }

  #advantages,
  #team {
    border: 2px solid $amber;
    padding: 50px;
    margin: 50px 0;
  }

  #partners {
    font-family: Inter;
    padding-bottom: 20px;
    .partnersContent {
      margin: 40px 0 0;
      >h2 {
        margin: 40px 0 0;
        padding: 0;
        color: $pearly;
        box-sizing: border-box;
        font-size: 30px;
        font-style: normal;
        font-weight: 500;
        line-height: normal;
        text-align: center;
        >br {
          display: block;
        }
        .encircled {
          position: relative;
          padding: 0;
          box-sizing: border-box;
        }
        
      }
    }
    .partnersCards {
      max-width: 320px;
      padding: 0 12px;
      margin: 43px 0 0;
      box-sizing: border-box;
      display: flex;
      flex-wrap: nowrap;
      overflow-x: auto;
      -webkit-overflow-scrolling: touch;
      gap: 14px;
      &::-webkit-scrollbar {
        display: none;
      }
      .partnersCard{
        //  display one card at a time
        //  flex: 0 0 auto; 
        display: flex;
        box-sizing: border-box;
        width: 100%;
        border-radius: 10px;
        flex-flow: column;
        align-items: center;
        justify-content: center;
        aspect-ratio: 1;
        .icon {
          background-color: #1D1D1D;
          border-radius: 10px;
          width: 168px;
          height: 168px;
          display: flex;
          justify-content: center;
          align-items: center;
        }
        .title {
          font-weight: bold;
          font-size: 14px;
          white-space: pre-line;
          margin: 17px 0 0;
          color: $pearly;
        }
      }
    }
  //   @include respond-to('small') {
  //     .partnersContent {
  //       >h2 {
  //         font-size: 36px;
  //         margin: 60px 0 0;
  //         .encircled::after {
  //           top: 10px;
  //           right: -110px;
  //           width: 142px;
  //           height: 85px;
  //         }
  //         >br {
  //           display: block;
  //         }
  //       }
  //     }
  //     .partnersCards{
  //       padding: 0 0px;
  //       .partnersCard{
  //         padding: 0 24px;
  //         max-width: 320px;
  //         flex: 0 0 calc(50% - 10px);
  //       }
        
  //     }
  //   }@include respond-to('medium') {
  //     .partnersContent {
  //       >h2 {
  //         margin: 80px 0 0;
  //         font-size: 44px;
  //       }
  //     }
  //     .partnersCards{
  //       gap: 20px;
  //       .partnersCard{
  //         max-width: 320px;
  //         .title {
  //           margin: 24px 0 0;
  //         }
  //       }
  //     }
  //   }
  //   @include respond-to('large') {
  //     .partnersContent {
  //       >h2 {
  //         margin: 110px 0 0;
  //         font-size: 54px;
  //         >br {
  //           display: block;
  //         }
  //       }
  //     }
  //     .partnersCards{
  //       margin: 65px auto 0;
  //       .partnersCard{
  //         max-width: 365px;
  //       }
  //     }
  //   }
  //   @include respond-to('extra-large') {
  //     .partnersContent {
  //       >h2 {
  //         >br {
  //           display: none;
  //         }
  //       }
  //     }
  //   }
  // }

  // @include respond-to('small') {
  //   #partners {
  //     padding-bottom: 40px;
  //   }
  // }
  // @include respond-to('medium') {
  //   #partners {
  //     padding-bottom: 60px;
  //   }
  // }

  // @include respond-to('large') {
  //   #partners {
  //     padding-bottom: 80px;
  //   }
  // }
  
}
}

